First design, one project

--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
 <body>
     <main class="main">
         <div class="container-main">
-            <nav>
-                <ul>
-                </ul>
-            </nav>
             <div id="intro" class="intro">
                 <div class="container-profile center">
                     <img class="img-profile" src="./img/Profile.jpg" alt="My profile photo">
@@ -29,19 +25,45 @@
             <div id="projects" class="margin-top">
                 <h2>PROJECTS</h2>
                 <div class="container-projects">
-                    <div><img src="./img/projects/xcom-wiki.png" alt="Xcom project logo"></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
+                    <div class="project">
+                        <h3 class="center">Xcom-wiki</h3>
+                        <div class="project-img center">
+                            <a href="https://kumathepowerful.github.io/Practice-Xcom-Wiki/" target="_blank">
+                                <img src="./img/projects/xcom-wiki.png" alt="Xcom project logo">
+                            </a>
+                            <div class="project-description">
+                                An fanpage from tha videogame Xcom
+                            </div>
+                        </div>
+                        <div class="tools-bar center">
+                            <img src="./img/tools/css3.png" alt="">
+                            <img src="./img/tools/html5.png" alt="">
+                            <img src="./img/tools/sass.png" alt="">
+                            <img src="./img/tools/bootstrap.png" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="container-info margin-top">
                 <div class="subcontainer-info">
                     <h2>ABOUT ME</h2>
                     <div class="container-txt">
-                        <p> </p>
+                        <p>
+                            I'm a web developer passionate about the development of interesting websites, I am in charge
+                            of taking the ideas of my clients and translating them into web pages that generate an
+                            impact on those who visit them.
+                        </p>
+                        <p>
+                            I like things simple and functional, I think it's important to be clear with the idea you
+                            want to convey.
+                        </p>
+                        <p>
+                            Additionally, I consider myself a serious person who can adapt to different situations, I'm
+                            interested in topics related to technology and entertainment.
+                        </p>
+                        <p>
+                            Let's start that new project together!
+                        </p>
                     </div>
                 </div>
                 <hr>
@@ -52,16 +74,58 @@
                             <h3>IONET (2022 - 2023)</h3>
                             <img src="./img/external-link.png" alt="link">
                         </a>
-                        <p>As a First Level Technician in the Systems Help Desk, I provided technical support and
+                        <p>
+                            As a First Level Technician in the Systems Help Desk, I provided technical support and
                             customer service to users from various sectors. My responsibilities encompassed computer
-                            support, servers, IP telephony, user management, and virtual machines in Azure. </p>
+                            support, servers, IP telephony, user management, and virtual machines in Azure.
+                        </p>
                     </div>
                 </div>
             </div>
-            <div class="margin-top">
+            <div class="margin-top ">
                 <div>
                     <h2>SKILLS</h2>
-                    <div>
+                    <div class="container-slider center">
+                        <div class="slider ">
+                            <div class="slide-track ">
+                                <div class="slide">
+                                    <img src="./img/skill/html5-logo-240.png" alt="">
+                                </div>
+                                <div class="slide">
+                                    <img src="./img/skill/css3-logo-240.png" alt="">
+                                </div>
+                                <div class="slide">
+                                    <img src="./img/skill/javascript-logo-240.png" alt="">
+                                </div>
+                                <div class="slide">
+                                    <img src="./img/skill/bootstrap-logo-240.png" alt="">
+                                </div>
+                                <div class="slide">
+                                    <img src="./img/skill/sass-logo-240.png" alt="">
+                                </div>
+                                <div class="slide">
+                                    <img src="./img/skill/react-logo-240.png" alt="">
+                                </div>
+                                <div class="slide">
+                                    <img src="./img/skill/html5-logo-240.png" alt="">
+                                </div>
+                                <div class="slide">
+                                    <img src="./img/skill/css3-logo-240.png" alt="">
+                                </div>
+                                <div class="slide">
+                                    <img src="./img/skill/javascript-logo-240.png" alt="">
+                                </div>
+                                <div class="slide">
+                                    <img src="./img/skill/bootstrap-logo-240.png" alt="">
+                                </div>
+                                <div class="slide">
+                                    <img src="./img/skill/sass-logo-240.png" alt="">
+                                </div>
+                                <div class="slide">
+                                    <img src="./img/skill/react-logo-240.png" alt="">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="margin-top">
@@ -72,10 +136,11 @@
                         <il><a href="https://wa.me/+573218121012" target="_blank"><img class="img-contat"
                                     src="./img/contact/whatsapp.png" alt="whatsapp"></a></il>
                         <il><a href="https://www.linkedin.com/in/sergio-david-osorio-gonz%C3%A1lez/"
-                                target="_blank"><img class="img-contat" src="./img/contact/linkedin.png" alt="LinkedIn"></a>
+                                target="_blank"><img class="img-contat" src="./img/contact/linkedin.png"
+                                    alt="LinkedIn"></a>
                         </il>
-                        <il><a href="mailto:sdosoriogonzalez19@outlook.es"><img class="img-contat" src="./img/contact/mail.png"
-                                    alt="E-mail"></a></il>
+                        <il><a href="mailto:sdosoriogonzalez19@outlook.es"><img class="img-contat"
+                                    src="./img/contact/mail.png" alt="E-mail"></a></il>
                     </ul>
                 </div>
             </div>
