Adjusted to responsive

--- a/index.html
+++ b/index.html
@@ -22,24 +22,34 @@
                     <h4><i>“If you're going to do something, do it right”</i></h4>
                 </div>
             </div>
-            <div id="projects" class="margin-top">
+            <div id="projects" class="margin-top movil-margin">
                 <h2>PROJECTS</h2>
-                <div class="container-projects">
-                    <div class="project">
+                <div class="container-projects center">
+                    <div class="project center">
                         <h3 class="center">Xcom-wiki</h3>
                         <div class="project-img center">
-                            <a href="https://kumathepowerful.github.io/Practice-Xcom-Wiki/" target="_blank">
-                                <img src="./img/projects/xcom-wiki.png" alt="Xcom project logo">
+                            <a href="projects/Xcom_Wiki/index.html" target="_blank">
+                                <img src="./img/projects/xcom-wiki.png" alt="Xcom project preview">
                             </a>
-                            <div class="project-description">
-                                An fanpage from tha videogame Xcom
-                            </div>
                         </div>
                         <div class="tools-bar center">
-                            <img src="./img/tools/css3.png" alt="">
-                            <img src="./img/tools/html5.png" alt="">
-                            <img src="./img/tools/sass.png" alt="">
-                            <img src="./img/tools/bootstrap.png" alt="">
+                            <img src="./img/tools/css3.png" alt="CSS logo">
+                            <img src="./img/tools/html5.png" alt="HTML logo">
+                            <img src="./img/tools/sass.png" alt="SASS logo">
+                            <img src="./img/tools/bootstrap.png" alt="Bootstrap logo">
+                        </div>
+                    </div>
+                    <div class="project center">
+                        <h3 class="center">Calculator in react</h3>
+                        <div class="project-img center">
+                            <a href="" target="_blank">
+                                <img src="./img/projects/react-calculator.png" alt="Calculator in react preview">
+                            </a>
+                        </div>
+                        <div class="tools-bar center">
+                            <img src="./img/tools/css3.png" alt="CSS logo">
+                            <img src="./img/tools/html5.png" alt="HTML logo">
+                            <img src="./img/tools/react-logo-240.png" alt="React logo">
                         </div>
                     </div>
                 </div>
@@ -49,7 +59,7 @@
                     <h2>ABOUT ME</h2>
                     <div class="container-txt">
                         <p>
-                            I'm a web developer passionate about the development of interesting websites, I am in charge
+                            I'm a web developer passionate about creation of interesting websites, I am in charge
                             of taking the ideas of my clients and translating them into web pages that generate an
                             impact on those who visit them.
                         </p>
@@ -67,7 +77,7 @@
                     </div>
                 </div>
                 <hr>
-                <div class="subcontainer-info">
+                <div class="subcontainer-info movil-margin">
                     <h2>EXPERIENCE</h2>
                     <div class="container-txt">
                         <a class="external-link" href="https://ionet.com.co/" target="_blank">
@@ -82,66 +92,68 @@
                     </div>
                 </div>
             </div>
-            <div class="margin-top ">
+            <div class="margin-top movil-margin ">
                 <div>
                     <h2>SKILLS</h2>
                     <div class="container-slider center">
                         <div class="slider ">
                             <div class="slide-track ">
                                 <div class="slide">
-                                    <img src="./img/skill/html5-logo-240.png" alt="">
+                                    <img src="./img/tools/html5.png" alt="">
                                 </div>
                                 <div class="slide">
-                                    <img src="./img/skill/css3-logo-240.png" alt="">
+                                    <img src="./img/tools/css3.png" alt="">
                                 </div>
                                 <div class="slide">
-                                    <img src="./img/skill/javascript-logo-240.png" alt="">
+                                    <img src="./img/tools/javascript-logo-240.png" alt="">
                                 </div>
                                 <div class="slide">
-                                    <img src="./img/skill/bootstrap-logo-240.png" alt="">
+                                    <img src="./img/tools/sass.png" alt="">
                                 </div>
                                 <div class="slide">
-                                    <img src="./img/skill/sass-logo-240.png" alt="">
+                                    <img src="./img/tools/bootstrap.png" alt="">
                                 </div>
                                 <div class="slide">
-                                    <img src="./img/skill/react-logo-240.png" alt="">
+                                    <img src="./img/tools/react-logo-240.png" alt="">
                                 </div>
                                 <div class="slide">
-                                    <img src="./img/skill/html5-logo-240.png" alt="">
+                                    <img src="./img/tools/html5.png" alt="">
                                 </div>
                                 <div class="slide">
-                                    <img src="./img/skill/css3-logo-240.png" alt="">
+                                    <img src="./img/tools/css3.png" alt="">
                                 </div>
                                 <div class="slide">
-                                    <img src="./img/skill/javascript-logo-240.png" alt="">
+                                    <img src="./img/tools/javascript-logo-240.png" alt="">
                                 </div>
                                 <div class="slide">
-                                    <img src="./img/skill/bootstrap-logo-240.png" alt="">
+                                    <img src="./img/tools/sass.png" alt="">
                                 </div>
                                 <div class="slide">
-                                    <img src="./img/skill/sass-logo-240.png" alt="">
+                                    <img src="./img/tools/bootstrap.png" alt="">
                                 </div>
                                 <div class="slide">
-                                    <img src="./img/skill/react-logo-240.png" alt="">
+                                    <img src="./img/tools/react-logo-240.png" alt="">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="margin-top">
+                <div class="margin-top ">
                     <h2>CONTACT ME!</h2>
-                    <ul class="ul-contact">
-                        <il><a href="https://github.com/KumaThePowerful" target="_blank"><img class="img-contat"
-                                    src="./img/contact/github.png" alt="GitHub"></a></il>
-                        <il><a href="https://wa.me/+573218121012" target="_blank"><img class="img-contat"
-                                    src="./img/contact/whatsapp.png" alt="whatsapp"></a></il>
-                        <il><a href="https://www.linkedin.com/in/sergio-david-osorio-gonz%C3%A1lez/"
-                                target="_blank"><img class="img-contat" src="./img/contact/linkedin.png"
+                    <div class="container-contacts">
+                        <div class="ul-contact">
+                            <a href="https://github.com/KumaThePowerful" target="_blank"><img class="img-contat"
+                                    src="./img/contact/github-logo-240.png" alt="GitHub"></a>
+                            <a href="https://wa.me/+573218121012" target="_blank"><img class="img-contat"
+                                    src="./img/contact/whatsapp-logo-240.png" alt="whatsapp"></a>
+                            <a href="https://www.linkedin.com/in/sergio-david-osorio-gonz%C3%A1lez/"
+                                target="_blank"><img class="img-contat" src="./img/contact/linkedin-logo-240.png"
                                     alt="LinkedIn"></a>
-                        </il>
-                        <il><a href="mailto:sdosoriogonzalez19@outlook.es"><img class="img-contat"
-                                    src="./img/contact/mail.png" alt="E-mail"></a></il>
-                    </ul>
+
+                            <a href="mailto:sdosoriogonzalez19@outlook.es"><img class="img-contat"
+                                    src="./img/contact/envelope-regular-240.png" alt="E-mail"></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
