JS_exercises ignored

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="project center">
                         <h3 class="center">Xcom-wiki</h3>
                         <div class="project-img center">
-                            <a href="projects/Xcom_Wiki/index.html" target="_blank">
+                            <a href="" target="_blank">
                                 <img src="./img/projects/xcom-wiki.png" alt="Xcom project preview">
                             </a>
                         </div>
