--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Sergio Osorio</title>
+    <link rel="icon" type="image/svg+xml" href="./img/code-alt-regular-240.png" />
+    <title>Portfolio | Sergio Osorio</title>
     <link rel="stylesheet" href="./style-sheets/styles.css">
 </head>
 
 <body>
     <main class="main">
-        <div class="container-main">
+        <div class="container-main">ñ
             <div id="intro" class="intro">
                 <div class="container-profile center">
                     <img class="img-profile" src="./img/Profile.jpg" alt="My profile photo">
@@ -26,10 +27,10 @@
                 <h2>PROJECTS</h2>
                 <div class="container-projects center">
                     <div class="project center">
-                        <h3 class="center">Xcom-wiki</h3>
+                        <h3 class="center">JavaScript Exercises</h3>
                         <div class="project-img center">
-                            <a href="" target="_blank">
-                                <img src="./img/projects/xcom-wiki.png" alt="Xcom project preview">
+                            <a href="https://sergiodosorio.github.io/Js-exercises/" target="_blank">
+                                <img src="./img/projects/Js-exercises.png" alt="A site for JavaScript exercises">
                             </a>
                         </div>
                         <div class="tools-bar center">
@@ -72,7 +73,7 @@
                             interested in topics related to technology and entertainment.
                         </p>
                         <p>
-                            Let's start that new project together!
+                           <b> Let's start that new project together!</b>
                         </p>
                     </div>
                 </div>
@@ -81,13 +82,13 @@
                     <h2>EXPERIENCE</h2>
                     <div class="container-txt">
                         <a class="external-link" href="https://ionet.com.co/" target="_blank">
-                            <h3>IONET (2022 - 2023)</h3>
+                            <h3>IONET </h3>
                             <img src="./img/external-link.png" alt="link">
                         </a>
                         <p>
                             As a First Level Technician in the Systems Help Desk, I provided technical support and
-                            customer service to users from various sectors. My responsibilities encompassed computer
-                            support, servers, IP telephony, user management, and virtual machines in Azure.
+                            customer service to users from various sectors. My responsibilities encompassed 
+                            support for computer, servers, IP telephony, user management, and virtual machines in Azure.
                         </p>
                     </div>
                 </div>
@@ -149,7 +150,6 @@
                             <a href="https://www.linkedin.com/in/sergio-david-osorio-gonz%C3%A1lez/"
                                 target="_blank"><img class="img-contat" src="./img/contact/linkedin-logo-240.png"
                                     alt="LinkedIn"></a>
-
                             <a href="mailto:sdosoriogonzalez19@outlook.es"><img class="img-contat"
                                     src="./img/contact/envelope-regular-240.png" alt="E-mail"></a>
                         </div>
@@ -158,9 +158,6 @@
             </div>
         </div>
     </main>
-    <footer class="footer">
-        <p class="color-dark">Portfolio creataed by Sergio David Osorio - All rights reserved</p>
-    </footer>
 </body>
 
 </html>
