--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main class="main">
-        <div class="container-main">ñ
+        <div class="container-main">
             <div id="intro" class="intro">
                 <div class="container-profile center">
                     <img class="img-profile" src="./img/Profile.jpg" alt="My profile photo">
@@ -30,7 +30,7 @@
                         <h3 class="center">JavaScript Exercises</h3>
                         <div class="project-img center">
                             <a href="https://sergiodosorio.github.io/Js-exercises/" target="_blank">
-                                <img src="./img/projects/Js-exercises.png" alt="A site for JavaScript exercises">
+                                <img src="img\projects\Js-exercises.png" alt="A site for JavaScript exercises">
                             </a>
                         </div>
                         <div class="tools-bar center">
