--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
                     <div class="project center">
                         <h3 class="center">JavaScript Exercises</h3>
                         <div class="project-img center">
-                            <a href="https://sergiodosorio.github.io/Js-exercises/" target="_blank">
+                            <a href="https://sergiodosorio.github.io/Js-exercises/" target="_blank" class="center" class="center">
                                 <img src="img\projects\Js-exercises.png" alt="A site for JavaScript exercises">
+                                <div class="project-des" id="Js-exercises-des">A webpage designed to put in practice Javascript skills</div>
                             </a>
                         </div>
                         <div class="tools-bar center">
@@ -43,7 +44,7 @@
                     <div class="project center">
                         <h3 class="center">Calculator in react</h3>
                         <div class="project-img center">
-                            <a href="" target="_blank">
+                            <a href="" target="_blank" class="center">
                                 <img src="./img/projects/react-calculator.png" alt="Calculator in react preview">
                             </a>
                         </div>
@@ -81,7 +82,7 @@
                 <div class="subcontainer-info movil-margin">
                     <h2>EXPERIENCE</h2>
                     <div class="container-txt">
-                        <a class="external-link" href="https://ionet.com.co/" target="_blank">
+                        <a class="external-link" href="https://ionet.com.co/" target="_blank" >
                             <h3>IONET </h3>
                             <img src="./img/external-link.png" alt="link">
                         </a>
