Calculator replaced for the cyberpunk proyect

--- a/index.html
+++ b/index.html
@@ -38,19 +38,21 @@
                             <img src="./img/tools/css3.png" alt="CSS logo">
                             <img src="./img/tools/html5.png" alt="HTML logo">
                             <img src="./img/tools/sass.png" alt="SASS logo">
-                            <img src="./img/tools/bootstrap.png" alt="Bootstrap logo">
+                            <img src="./img/tools/react-logo-240.png" alt="React logo">
                         </div>
                     </div>
                     <div class="project center">
-                        <h3 class="center">Calculator in react</h3>
+                        <h3 class="center">Cyberpunk generator </h3>
                         <div class="project-img center">
-                            <a href="" target="_blank" class="center">
-                                <img src="./img/projects/react-calculator.png" alt="Calculator in react preview">
+                            <a href="https://sergiodosorio.github.io/cyberpunk2020-generator/" target="_blank" class="center">
+                                <img src="./img/projects/cyberpunk.png" alt="Calculator in react preview">
+                                <div class="project-des" id="Js-exercises-des">A NPC generator for the tabletop game Cyberpunk 2020</div>
                             </a>
                         </div>
                         <div class="tools-bar center">
                             <img src="./img/tools/css3.png" alt="CSS logo">
                             <img src="./img/tools/html5.png" alt="HTML logo">
+                            <img src="./img/tools/sass.png" alt="SASS logo">
                             <img src="./img/tools/react-logo-240.png" alt="React logo">
                         </div>
                     </div>
